Per-player location ownership and access
Refactor CoordinateStore to track saved locations per-player (Map<UUID, Map<String,SavedLocation>>), and update persistence to use storage.points.<uuid>.<name> keys. Add new APIs that accept an owner UUID for storing, retrieving, and listing names, and expose getAllOwners().

Update commands and listeners to support ownership and optional cross-player read-only access via the syntax player:name (and #player:name in command interpolation). Changes include:
- GotoCommand: resolve OfflinePlayer UUIDs, allow /goto <name> or /goto <player>:<name>, teleport to the saved world's coordinates, and improved tab completion for own and cross-player entries.
- ListLocsCommand: list either the sender's locations or another player's locations (/listlocs [player]) and build appropriate clickable /goto links; add tab-completion for player names.
- SetLocCommand: enforce ownership when modifying (only owner may overwrite) and restrict tab-completion to the player's own names.
- StoreLocCommand: store locations under the player's UUID (ownership enforced).
- CommandInterceptor & TabCompletionInterceptor: support #name and #player:name patterns, resolve OfflinePlayer lookups, and expand tab completions for both personal and cross-player references.

Notes: Config format changed to group locations by player UUID; loading will log invalid UUID keys. Cross-player access is read-only; only owners can create/modify their locations.